--- a/toDo/templates/toDo/base/base.html
+++ b/toDo/templates/toDo/base/base.html
@@ -45,6 +45,11 @@
     <div class="container">
       {% block content %}{% endblock content %}
     </div>
+    <footer>
+      <div class="content-footer">
+        <p>Made with ❤️ by Letícia Vieira</p> 
+      </div>
+    </footer>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
